# pyfea

./: .gitignore  1D_static.inp  K_mod.csv  QFEM_1D_static.py  QFEM_element_analysis.py  README.md  f_mod.csv  pyproject.toml
FEA sample code_Bower/: FEM_1D_newmark.m  FEM_1D_static.m  FEM_1D_static.tif  FEM_2Dor3D_linelast_dynamic.m  FEM_Bbar.m  FEM_conststrain_input.txt  FEM_hourglasscontrol.m  FEM_hourglassing_demo.m  FEM_hyperelastic.m  FEM_incompatible_modes.m  FEM_selective_reduced_integration.m  Hyperelastic_quad4.txt  Hypoelastic_quad4.txt  Linear_elastic_dynamic_beam.txt  Linear_elastic_triangles.txt  Viscoplastic_quad4.txt  shear_locking_demo.txt  volumetric_locking_demo_linear.txt  volumetric_locking_demo_quadratic.txt
MatLab sample code_Bower/: FEM_2Dor3D_linelast_standard.m  FEM_2Dor3D_viscoplastic.m  FEM_volumetric_locking_demo.m  K_Bower.csv  Linear_elastic_brick20.txt  Linear_elastic_pressurized_cylinder.txt  Linear_elastic_quad4.txt  Linear_elastic_quad8.txt  fem_conststrain.m
archived/: (Bower) FEM_2Dor3D_linelast_standard.m  (Bower) Linear_elastic_brick4.txt  FEA equation scatches.docx  L-tension.inp  L-tension_mesh.inp  Newton_Raphson_iteration.py  fem_element.py  infinitesimal_strain_in_pure_rotation.py  ode_stability.py  simple_tension.inp  simple_tension_1D.inp  simple_tension_1D.py  simple_tension_1el.inp  simple_tension_3D.py
locking_demo/: shear_locking.ipynb
output/: Linear_elastic_quad4_results.csv  linear_elastic_Brick8_results.csv  linear_elastic_triangles_results.csv  shear_locking_demo_results.csv
src/: QFEM.py  utils.py
(+19 files in other folders)
